  Version 3.28
  1. Applied patch from Allen Day that makes Cookie parsing RFC2109 compliant
	(attribute/values can be separated by commas as well as semicolons).

  Version 3.27
  1. Applied patch from Steve Taylor that allows checkbox_groups to be
  disabled with a new -disabled=> option.

  Version 3.26
  1. Fixed alternate stylesheet behavior so that it is insensitive to order of declarations.
  2. Patch from John Binns to allow users to provide a callback to CGI::Carp.
  3. Added "~" as an unreserved character in escape().
  4. Patch from Chris Fedde to prevent HTTP_HOST from inhibiting SERVER_PORT in url() generation.
  5. Fixed outdated documentation (and behavior) of -language in start_html -script option.
  6. Fixed bug in seconds calculation in CGI::Util::expire_calc.

  Version 3.25
  1. Fixed the link to the Netscape frames page.
  2. Added ability to specify an alternate stylesheet.
  3. Add support for XForms POST submssion both as application/xml or as multipart/related

  Version 3.24
  1. In startform(), if request_uri() returns undef, then falls back
  to self_url(). This should rarely happen except when run outside of
  the CGI environment.
  2. image button alignment options were mistakenly being capitalized, causing xhtml validation to fail.

  Version 3.23
  1. Typo in upload() persisted, now fixed for real. Thanks to
  Emanuele Zeppieri for correct patch and regression test.

  Version 3.22
  1. Typo in upload() function broke uploads. Now fixed (CPAN bug 21126).

  Version 3.21
  1. Don't try to read data at all when POST > $POST_MAX.
  2. Fixed bug that caused $cgi->param('name',undef,'value') to unset param('name') entirely.
  3. Fixed bug in which upload() sometimes returns empty. (CPAN bug #12694).
  4. Incorporated patch from BURAK@cpan.org to support HTTPcookies (CPAN bug 21019).

  Version 3.20
  1. Patch from David Wheeler for CGI::Cookie->bake(). Uses mod_perl headers_out->add()
	rather than headers_out->set().